--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng-navigator-share": "^1.0.0",
+    "ng6-social-button": "^1.0.5",
+    "ngx-spinner": "^6.1.2",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
   },
