--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "ng6-social-button": "^1.0.5",
     "ngx-spinner": "^6.1.2",
     "rxjs": "^6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.8.28"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular/cli": "~6.1.2",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "^2.8.15",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
