--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/material": "^7.2.1",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/pwa": "^0.8.7",
     "@angular/router": "^6.1.0",
+    "@angular/service-worker": "^6.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng-navigator-share": "^1.0.0",
