--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -22,7 +22,8 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/assets/**"
+          "/assets/**",
+          "/assets/fonts/**"
         ]
       }
     }
@@ -30,12 +31,18 @@
   "dataGroups":[
     {
       "name": "starwars-api",
-      "urls": ["https://swapi.co/api/**"],
+      "urls": ["https://swapi.co/api/**",
+               "https://swapi.co/api/people/**",
+               "https://swapi.co/api/planets/**",
+               "https://swapi.co/api/films/**",
+               "https://swapi.co/api/species/**",
+               "https://swapi.co/api/vehicles/**",
+               "https://swapi.co/api/starships/**"],
       "cacheConfig": {
         "strategy": "freshness",
-        "maxSize": 30,
+        "maxSize": 100,
         "maxAge": "1h",
-        "timeout": "5s"
+        "timeout": "15s"
       }
     }
   ]
